# snowman

./: README.asciidoc
src/ida-plugin/: IdaFrontend.cpp
src/nc/arch/: CMakeLists.txt
src/nc/arch/ppc/: CMakeLists.txt  PPCArchitecture.cpp  PPCArchitecture.h  PPCCallingConventions.cpp  PPCCallingConventions.h  PPCDisassembler.cpp  PPCDisassembler.h  PPCInstruction.h  PPCInstructionAnalyzer.cpp  PPCInstructionAnalyzer.h  PPCRegisterTable.i  PPCRegisters.cpp  PPCRegisters.h
src/nc/arch/spu/: CMakeLists.txt  SPU.cpp  SPU.h  SPUArchitecture.cpp  SPUArchitecture.h  SPUCallingConventions.cpp  SPUCallingConventions.h  SPUDisassembler.cpp  SPUDisassembler.h  SPUInstruction.h  SPUInstructionAnalyzer.cpp  SPUInstructionAnalyzer.h  SPURegisterTable.i  SPURegisters.cpp  SPURegisters.h
src/nc/common/: CheckedCast.h
src/nc/core/: CMakeLists.txt
src/nc/core/arch/: ArchitectureRepository.cpp
src/nc/input/elf/: ElfParser.cpp  elf_common.h
src/nc/input/mach-o/: MachOParser.cpp  mach-o.h
src/nc/input/pe/: PeParser.cpp  pe.h
